# ReasonForge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  add_geometry_stateful_tests.py  add_matrix_stateful_tests.py  add_quantum_stateful_tests.py  add_remaining_stateful_tests.py  analyze_failures.py  benchmark_runner.py  check_test_definitions.py  config.yaml  config.yaml.example  convert_skip_to_stateful.py  debug_17_remaining_failures.py  debug_2_remaining.py  debug_4_remaining.py  debug_failing_tests.py  debug_geom_011.py  debug_geom_3_4.py  debug_matrix_tests.py  extract_failures.py  fix_corrupted_file.py  fix_field_exists.py  fix_final_17_failures.py  fix_final_17_failures_corrected.py  fix_final_4_failures.py  fix_final_failures.py  fix_geom_011.py  fix_geom_011_skip.py  fix_geom_011_toolname.py  fix_geom_3_4.py  fix_geom_3_4_final.py  fix_last_2_failures.py  fix_matrix_validations.py  fix_remaining_failures.py  fix_skip_tests.py  fix_syntax_errors.py  fix_validation_issues.py  fix_validations.py  hard_test_suite.py  llm_providers.py  metrics.py  (+6 more)
benchmarks/results/: benchmark_report_20251122_190110.html  benchmark_report_20251122_190110.md  benchmark_report_20251122_190219.html  benchmark_report_20251122_190219.md  benchmark_report_20251122_195209.html  benchmark_report_20251122_195209.md  benchmark_report_20251122_195538.html  benchmark_report_20251122_195538.md  benchmark_report_20251122_195640.html  benchmark_report_20251122_195640.md  benchmark_report_20251122_200850.html  benchmark_report_20251122_200850.md  benchmark_report_20251122_204011.html  benchmark_report_20251122_204011.md  benchmark_report_20251122_225529.html  benchmark_report_20251122_225529.md  benchmark_report_20251122_225953.html  benchmark_report_20251122_225953.md  benchmark_report_20251122_230204.html  benchmark_report_20251122_230204.md  benchmark_report_20251122_230604.html  benchmark_report_20251122_230604.md
docs/usage-examples/: USAGE_EXAMPLES.md  reasonforge-algebra-examples.md  reasonforge-analysis-examples.md  reasonforge-expressions-examples.md  reasonforge-geometry-examples.md  reasonforge-logic-examples.md  reasonforge-physics-examples.md  reasonforge-statistics-examples.md
src/reasonforge_mcp/: __init__.py  __main__.py  advanced_tools.py  data_science_tools.py  hybrid_tools.py  logic_tools.py  numerical_hybrid_tools.py  physics_tools.py  quantum_tools.py  server.py  symbolic_engine.py  visualization_tools.py
tests/: conftest.py
tests/legacy/: README.md  debug_test.py  test_advanced_solvers.py  test_calculus_operations.py  test_core_server_tools.py  test_data_science_tools.py  test_error_handling.py  test_expression_operations.py  test_hybrid_tools.py  test_integration_complete.py  test_logic_tools.py  test_matrix_operations.py  test_new_implementations.py  test_numerical_hybrid_tools.py  test_optimization.py  test_packages.py  test_pattern_recognition.py  test_physics_tools.py  test_probability_tools.py  test_quantum_tools.py  test_reasonforge_algebra.py  test_reasonforge_analysis.py  test_reasonforge_expressions.py  test_reasonforge_geometry.py  test_reasonforge_logic.py  test_reasonforge_physics.py  test_reasonforge_statistics.py  test_server.py  test_smoke.py  test_tensor_calculus.py  (+7 more)
(+3 files in other folders)
